# rag

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.dev-resources/prompts/: .txt
.devcontainer/: setup.sh
app/: __init__.py  config.py  constants.py  logging_config.py  main.py  startup_warmup.py
app/services/: __init__.py  azure_openai_chat_provider.py  battleground.py  chat.py  chat_provider_models.py  chat_provider_router.py  chunking.py  documents.py  indexing.py  ingest.py  llm_registry.py  openai_compatible_chat_provider.py  openrouter_client.py  parsers.py  query_engine.py  retrieval.py  vector_store.py
app/templates/: index.html
docs/plans/: 2026-02-21-model-battleground-design.md  2026-02-21-model-battleground-implementation.md  2026-02-21-rag-openrouter-design.md  2026-02-21-rag-openrouter-implementation.md  2026-02-22-chat-model-selection-implementation.md  2026-02-22-llamaindex-full-migration-design.md  2026-02-22-llamaindex-full-migration-implementation.md  2026-02-22-multi-backend-chat-design.md  2026-02-22-multi-backend-chat-support-implementation.md
test_data/: test.txt
tests/: conftest.py  test_config.py  test_health_smoke.py  test_main_warning_suppression.py  test_startup_warmup.py
tests/api/: test_battleground_api.py  test_chat_api.py  test_documents_api.py  test_upload_api.py
tests/integration/: test_upload_chat_flow.py
tests/services/: test_azure_openai_chat_provider.py  test_battleground.py  test_chat.py  test_chat_provider_router.py  test_chunking.py  test_documents.py  (+9 more)
(+10 files in other folders)
