[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-openrouter-app"
version = "0.1.0"
description = "FastAPI RAG MVP with OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "python-multipart==0.0.20",
  "jinja2==3.1.6",
  "pypdf==6.0.0",
  "python-docx==1.2.0",
  "httpx==0.28.1",
  "chromadb==1.0.15",
  "python-dotenv==1.2.1",
  "llama-index==0.12.52",
  "llama-index-llms-openai==0.4.7",
  "llama-index-llms-openai-like==0.4.0",
  "llama-index-llms-azure-openai==0.3.4",
  "llama-index-embeddings-openai==0.3.1",
  "llama-index-vector-stores-chroma==0.4.2",
  "llama-index-readers-file==0.4.11",
  "openai==1.109.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
